# cmake_reference

./: .gitignore  CMakeLists.txt  readme.md
.github/workflows/: ci_linux.yml  ci_win.yml
app/: CMakeLists.txt  main.c
hello_lib/: CMakeLists.txt  hello_libConfig.cmake
hello_lib/public/: hello.h
src/app/: CMakeLists.txt
src/hello_libs/: CMakeLists.txt  hello.c  hello_libsConfig.cmake
src/world_libs/: CMakeLists.txt  world.c  world_libsConfig.cmake
world_lib/: world.c  world_libConfig.cmake
world_lib/public/: world.h
